--- a/01/myPage.html
+++ b/01/myPage.html
@@ -16,6 +16,8 @@
     <h5>h5</h5>
     <h6>h6</h6>
     <p>
+        <!-- Жирний шрифт-<strong></strong>, курсив-<em></em>, параграф-<p></p>,
+             старий курсив-<i></i>, розмал.текст в окрем. кол.-<span></span>, дозволяє напис. слова в різних рядках-<pre></pre>, старий жирний шрифт-<b></b>. -->
         <strong>
             eveniet quibusdam minima autem reprehenderit sint sequi perferendis laudantium?
         </strong>
