--- a/02/test.html
+++ b/02/test.html
@@ -31,9 +31,8 @@
     <a href="tel:+306212312123">Call me</a>
     <a href="mailto:test@gmail.com">Have questions?</a>
     <a href="https://group.terwqrewr.com/">Join telegram</a>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum illum nobis voluptates sit saepe labore impedit molestiae? Voluptates nam adipisci dolores sit est quod. Nesciunt itaque veritatis qui, dolorum deserunt molestias quidem quo assumenda. Iste magni perferendis reiciendis dignissimos, dicta voluptates atque saepe adipisci officia ipsam, odit voluptate. Repellat porro distinctio iure incidunt eveniet, eius consectetur provident nam aut ea molestiae, quaerat voluptatem sint id! Ab ut voluptatibus ipsam a aspernatur suscipit fuga ipsa maxime commodi? Dolore, eos asperiores magnam eaque ut accusantium eius sit enim, ea illo explicabo odio. Repellendus tempore, tenetur unde est et minima. Cupiditate molestias minima fuga animi temporibus, voluptatem nisi, nostrum nemo sequi nam rerum adipisci, corrupti ab facilis. Sunt consectetur veniam provident voluptatibus dolor distinctio quisquam ipsum rerum molestias praesentium doloremque, sint cumque facere ullam repudiandae quae. Ut provident tempora minus illo architecto pariatur debitis excepturi. Non sint porro, repellat voluptatum facere quae voluptas? Enim autem, molestiae ipsa, pariatur fugit sit vel earum error, id dolores minus dignissimos? Culpa corrupti tempora fugiat blanditiis. Maiores tempore iure perferendis blanditiis necessitatibus delectus tempora sequi, quia rem libero facilis magni autem maxime iste totam error eum consectetur. Temporibus aspernatur dolore accusamus obcaecati odit reiciendis beatae nisi inventore expedita aperiam voluptatem voluptate dolores blanditiis iusto officiis eum, perspiciatis nihil et, aut cupiditate placeat animi repellendus! Expedita, unde! Et, suscipit cupiditate maiores harum libero a eum ea est quibusdam commodi excepturi quia voluptates! Explicabo dolores consectetur eligendi quia, aliquam nisi corporis commodi maxime vel molestias saepe, enim possimus voluptatibus atque in repellendus minima, hic rerum. Iure cum ipsum commodi ducimus aliquam eaque officiis placeat magni harum nostrum ab ut, repellat ad. Doloribus, nemo at veniam unde nulla accusantium aliquid doloremque voluptates? Quidem iure pariatur repudiandae inventore delectus consequatur exercitationem eos explicabo sapiente odit dolorem necessitatibus eligendi ad at architecto, eaque placeat consequuntur ullam perferendis ducimus modi nostrum mollitia repellendus? Consequatur beatae totam, aut debitis qui temporibus consectetur veritatis voluptatibus accusamus. Deserunt odit exercitationem dicta. Natus eaque eum quaerat est. Voluptatibus delectus quia dicta hic in cum quae repellendus debitis, blanditiis ab veniam iste numquam aspernatur, ipsa autem inventore voluptatem dolorem tenetur. Debitis velit quia accusamus quidem repellat optio commodi reprehenderit ea in saepe animi id adipisci voluptates, aliquid culpa voluptatem molestiae aliquam temporibus odio doloremque fuga aspernatur minima! Magnam, dolore hic minima placeat non, natus obcaecati cupiditate ea excepturi recusandae totam tenetur temporibus nostrum culpa similique at, reprehenderit possimus consectetur magni. Dignissimos, repellendus consectetur, dolorem vel id veritatis facilis similique explicabo consequatur suscipit obcaecati officia quia dolorum molestiae eligendi illum commodi veniam doloribus saepe nostrum eaque. Magni, quia molestiae quas beatae consectetur unde sint atque minima tempora saepe ratione nemo. Reprehenderit quisquam vel quod at quaerat id a repudiandae illum. Adipisci ipsum nisi delectus, placeat eligendi voluptas illum repudiandae voluptatibus iure, provident quod magnam minima a? Architecto modi officia, error totam ad enim odit sit facere dolores rem suscipit soluta dolorem atque? Tempore ratione sed enim, tempora quos minus atque pariatur quibusdam optio aspernatur accusamus consequatur possimus sequi distinctio.
-    </p>
+    <a href="media.html" target="_blank">Media file tags</a>
+    <!-- <a href="C:\My education\02\media.html" target="_blank">Media page 2</a> це приклад невірного вказування шляху -->
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum illum nobis voluptates sit saepe labore impedit molestiae? Voluptates nam adipisci dolores sit est quod. Nesciunt itaque veritatis qui, dolorum deserunt molestias quidem quo assumenda. Iste magni perferendis reiciendis dignissimos, dicta voluptates atque saepe adipisci officia ipsam, odit voluptate. Repellat porro distinctio iure incidunt eveniet, eius consectetur provident nam aut ea molestiae, quaerat voluptatem sint id! Ab ut voluptatibus ipsam a aspernatur suscipit fuga ipsa maxime commodi? Dolore, eos asperiores magnam eaque ut accusantium eius sit enim, ea illo explicabo odio. Repellendus tempore, tenetur unde est et minima. Cupiditate molestias minima fuga animi temporibus, voluptatem nisi, nostrum nemo sequi nam rerum adipisci, corrupti ab facilis. Sunt consectetur veniam provident voluptatibus dolor distinctio quisquam ipsum rerum molestias praesentium doloremque, sint cumque facere ullam repudiandae quae. Ut provident tempora minus illo architecto pariatur debitis excepturi. Non sint porro, repellat voluptatum facere quae voluptas? Enim autem, molestiae ipsa, pariatur fugit sit vel earum error, id dolores minus dignissimos? Culpa corrupti tempora fugiat blanditiis. Maiores tempore iure perferendis blanditiis necessitatibus delectus tempora sequi, quia rem libero facilis magni autem maxime iste totam error eum consectetur. Temporibus aspernatur dolore accusamus obcaecati odit reiciendis beatae nisi inventore expedita aperiam voluptatem voluptate dolores blanditiis iusto officiis eum, perspiciatis nihil et, aut cupiditate placeat animi repellendus! Expedita, unde! Et, suscipit cupiditate maiores harum libero a eum ea est quibusdam commodi excepturi quia voluptates! Explicabo dolores consectetur eligendi quia, aliquam nisi corporis commodi maxime vel molestias saepe, enim possimus voluptatibus atque in repellendus minima, hic rerum. Iure cum ipsum commodi ducimus aliquam eaque officiis placeat magni harum nostrum ab ut, repellat ad. Doloribus, nemo at veniam unde nulla accusantium aliquid doloremque voluptates? Quidem iure pariatur repudiandae inventore delectus consequatur exercitationem eos explicabo sapiente odit dolorem necessitatibus eligendi ad at architecto, eaque placeat consequuntur ullam perferendis ducimus modi nostrum mollitia repellendus? Consequatur beatae totam, aut debitis qui temporibus consectetur veritatis voluptatibus accusamus. Deserunt odit exercitationem dicta. Natus eaque eum quaerat est. Voluptatibus delectus quia dicta hic in cum quae repellendus debitis, blanditiis ab veniam iste numquam aspernatur, ipsa autem inventore voluptatem dolorem tenetur. Debitis velit quia accusamus quidem repellat optio commodi reprehenderit ea in saepe animi id adipisci voluptates, aliquid culpa voluptatem molestiae aliquam temporibus odio doloremque fuga aspernatur minima! Magnam, dolore hic minima placeat non, natus obcaecati cupiditate ea excepturi recusandae totam tenetur temporibus nostrum culpa similique at, reprehenderit possimus consectetur magni. Dignissimos, repellendus consectetur, dolorem vel id veritatis facilis similique explicabo consequatur suscipit obcaecati officia quia dolorum molestiae eligendi illum commodi veniam doloribus saepe nostrum eaque. Magni, quia molestiae quas beatae consectetur unde sint atque minima tempora saepe ratione nemo. Reprehenderit quisquam vel quod at quaerat id a repudiandae illum. Adipisci ipsum nisi delectus, placeat eligendi voluptas illum repudiandae voluptatibus iure, provident quod magnam minima a? Architecto modi officia, error totam ad enim odit sit facere dolores rem suscipit soluta dolorem atque? Tempore ratione sed enim, tempora quos minus atque pariatur quibusdam optio aspernatur accusamus consequatur possimus sequi distinctio.
     </p>
@@ -41,6 +40,122 @@
     <strong>
         <a href="#bottom">Bottom page</a>
     </strong>
+    <!-- Маркеровані списки-<ul></ul>, номеровані-<ol></ol> -->
+    <!-- В середині них можна розміщувати тег <li></li> -->
+    <ul>
+        <!-- <h4>Hello ul</h4> так робити в середині ul ol не можна -->
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>
+            <h4>
+                Number list
+            </h4>
+            <ol>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+            </ol>
+        </li>
+    </ul>
+    <!-- <ol reversed type="a"></ol> -->
+    <ol start="4">
+        <!-- <h4>Hello ul</h4> так робити в середині ul ol не можна -->
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 4</li>
+        <li>Item 4</li>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 4</li>
+        <li>Item 4</li>
+    </ol>
+    <!-- Block tags -->
+    <div>Div element</div>
+    <header>Header</header>
+    <nav>
+        Navigation
+    </nav>
+    <aside>
+        Aside block
+    </aside>
+    <main>
+        Main block
+    </main>
+    <article>
+        <h3>Article title</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae accusamus eos, eum, eligendi consequatur quas veniam assumenda corporis delectus minus accusantium officiis soluta iure debitis! Est veritatis eveniet dolore aperiam?
+        </p>
+    </article>
+    <section>
+        Section
+    </section>
+    <form action="">
+        Form tags
+    </form>
+    <footer>
+        Footer
+    </footer>
+    <table border="3" style="width: 100%;">
+        <thead>
+            <tr>
+                <th colspan="2">
+                    Name/
+
+                    User email
+                </th>
+                <th>
+                    User age
+                </th>
+                <th>
+                    User rating
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    Ros
+                </td>
+                <td>
+                    ros@gmail.com
+                </td>
+                <td>
+                    20
+                </td>
+                <td rowspan="2">
+                    5.6
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Tom
+                </td>
+                <td>
+                    tom@gmail.com
+                </td>
+                <td>
+                    30
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Tom 2
+                </td>
+                <td>
+                    tom2@gmail.com
+                </td>
+                <td>
+                    32
+                </td>
+                <td>
+                    32
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
     
