--- a/02/media.html
+++ b/02/media.html
@@ -9,6 +9,24 @@
     <h1>
         Media tag page
     </h1>
-    <img src="" alt="">
+    <img src="test.png" width="100" height="100" alt="smile face">
+    <img src="img/smi.png" alt="smile face">
+    <!-- <div>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8mEIWZjRFdiO4YIkq790lTaNzTtCH6DcwrQ&usqp=CAU" alt="internet img">
+    </div> -->
+    <div>
+        <audio controls>
+            <source src="mp3/file_MP3.mp3">
+        </audio>
+    </div>
+    <div>
+        <video controls width="500" height="400">
+            <source src="mp4/file_example_MP4.mp4">
+        </video>
+    </div>
+    <iframe src="https://getbootstrap.com/docs/5.3/getting-started/introduction/" width="800" height="400"
+    frameborder="0"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3QYg-oITpGw" title="Youtube video player"
+     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
