--- a/02/hw02-PDF.html
+++ b/02/hw02-PDF.html
@@ -90,5 +90,9 @@ Black History Month.[18] [101
     <br>
     Telegram:
     <a href="#" target="_blank">@login_login_login</a>
+    <br>
+    <h3>
+    <a href="hw02-table.html" target="_blank">Page with table</a>
+    </h3>
 </body>
 </html>
