--- a/02/hw02-table.html
+++ b/02/hw02-table.html
@@ -6,6 +6,77 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <table border="3" style="width: 100%;">
+        <thead>
+            <tr>
+                <th colspan="2">
+                    Author/Book
+                </th>
+                
+                <th>
+                    Rating
+                </th>
+
+                <th>
+                    First published
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    J.K. Rowling
+                </td>
+
+                <td>
+                    Harry Potter and the Sorcerer's Stone
+                </td>
+
+                <td>
+                    4.47
+                </td>
+                <td>
+                    June 26, 1997
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Suzanne Collins
+                </td>
+
+                <td>
+                    Catching Fire
+                </td>
+
+                <td>
+                    4.32
+                </td>
+                <td>
+                    September 1, 2009
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    George Orwell
+                </td>
+
+                <td>
+                    1984
+                </td>
+
+                <td>
+                    4.19
+                </td>
+                <td>
+                    June 8, 1949
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <br>
+    <h3>
+    <a href="hw02-PDF.html" target="_blank">Page with PDF file</a>
+    </h3>
 </body>
 </html>
