--- a/02/hw02-PDF.html
+++ b/02/hw02-PDF.html
@@ -92,7 +92,7 @@ Black History Month.[18] [101
     <a href="#" target="_blank">@login_login_login</a>
     <br>
     <h3>
-    <a href="hw02-table.html" target="_blank">Page with table</a>
+    <a href="HW02-table.html" target="_blank">Page with table</a>
     </h3>
 </body>
 </html>
