--- a/02/hw02-table.html
+++ b/02/hw02-table.html
@@ -76,7 +76,7 @@
     </table>
     <br>
     <h3>
-    <a href="hw02-PDF.html" target="_blank">Page with PDF file</a>
+    <a href="HW02-PDF.html" target="_blank">Page with PDF file</a>
     </h3>
 </body>
 </html>
